WODEN-192 Fix to ensure schemaLocation is correctly resolved against a base URI when the WSDL and XSD files are packaged in jar files.
git-svn-id: https://svn.apache.org/repos/asf/webservices/woden/trunk@608682 13f79535-47bb-0310-9956-ffa450edef68